--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -12,6 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      path: jabs
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v4
@@ -50,7 +51,7 @@ jobs:
       run: cmake --install ${{ github.workspace }}\build_jibal --prefix ${{ github.workspace }}\install
 
     - name: Configure JaBS
-      run: cmake ${{ steps.vcpkg.outputs.vcpkg-cmake-config }} -DCMAKE_PREFIX_PATH="${{github.workspace}}\install" -B ${{github.workspace}}\build_jabs -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -S ${{github.workspace}}
+      run: cmake ${{ steps.vcpkg.outputs.vcpkg-cmake-config }} -DCMAKE_PREFIX_PATH="${{github.workspace}}\install" -B ${{github.workspace}}\build_jabs -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -S ${{github.workspace}}\jabs
 
     - name: Build JaBS
       run: cmake --build ${{github.workspace}}\build_jabs --config ${{env.BUILD_TYPE}}
@@ -59,7 +60,7 @@ jobs:
       run: cmake --install ${{ github.workspace }}\build_jabs --prefix ${{ github.workspace }}\install
 
     - name: Configure QJaBS
-      run: cmake ${{ steps.vcpkg.outputs.vcpkg-cmake-config }} -DCMAKE_PREFIX_PATH="${{github.workspace}}\install" -B ${{github.workspace}}\build_qjabs -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -S ${{github.workspace}}\qjabs
+      run: cmake ${{ steps.vcpkg.outputs.vcpkg-cmake-config }} -DCMAKE_PREFIX_PATH="${{github.workspace}}\install" -B ${{github.workspace}}\build_qjabs -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -S ${{github.workspace}}\jabs\qjabs
 
     - name: Build QJaBS
       run: cmake --build ${{github.workspace}}\build_qjabs --config ${{env.BUILD_TYPE}}
