--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      path: jabs
+      with:
+        path: jabs
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v4
