--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
+        fetch-depth: 0
+        filter: tree:0 #treeless clone, tags are preserved (possible issues with fetch-tags and fetch-depth 1)
         path: jabs
 
     - name: Install Qt
