--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -61,6 +61,9 @@ target_link_libraries(jabs
 
 if(OpenMP_C_FOUND)
     target_link_libraries(jabs PUBLIC OpenMP::OpenMP_C)
+    if (MSVC)
+        add_compile_options(/openmp)
+    endif ()
 endif()
 
 if(READLINE_FOUND)
