--- a/qjabs/CMakeLists.txt
+++ b/qjabs/CMakeLists.txt
@@ -165,9 +165,10 @@ target_link_libraries(qjabs
 
 if(OpenMP_C_FOUND)
     target_link_libraries(qjabs PUBLIC OpenMP::OpenMP_C)
-    if (MSVC)
-        add_compile_options(/openmp)
-    endif ()
+endif()
+
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(qjabs PUBLIC OpenMP::OpenMP_CXX)
 endif()
 
 install(TARGETS qjabs
